Исправил ошибку с прохождением теста.